2005-01-10  Ito Kazumitsu  < kaz@maczuka.gcd.org>

	* kaffe/libraries/javalib/kaffe/io/KaffeCharset.java,
	kaffe/libraries/javalib/kaffe/io/KaffeCharsetProvider.java:
	New files.

2005-01-10  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/external.c
	(loadNativeLibrary): Removed verbose code as it produces wrong error
	on many systems.

	* libraries/clib/native/Runtime.c
	(linkLibrary): Do not throw exception anymore. The java library will
	take care of it.

2005-01-10  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/jit/machine.c,
	kaffe/kaffevm/jit3/machine.c
	(finishInsnSequence): Align the constant pool on 8 bytes (sizeof(union
	_constpoolval)). On sparc, a misalignment causes a SIGBUS in
	establishConstants.

2005-01-09  Guilhem Lavaux  <guilhem@kaffe.org>

	* Makefile.am
	(BUILD_ENVIRONMENT): Add classpath to (DY)LD_LIBRARY_PATH.

	* libraries/javalib/Makefile.am.in: Do not build LD_LIBRARY_PATH.

	* Makefile.in, libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in: Regenerated.

	* libraries/javalib/bootstrap.classlist: Added java.util.Currency.

	* libraries/javalib/Klasses.jar.bootstrap: Regenerated.

2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/beans/GenericBeanInfo.java:
	Removed. No loger necessary.
	
2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Process.java:
	Replaced by implementation from GNU Classpath.
	
2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Package.java:
	Replaced by implementation from GNU Classpath.
	
2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/reflect/Proxy.java:
	Resynced with GNU Classpath.

	2004-10-15  Michael Koch  <konqueror@gmx.de>

	* java/lang/reflect/Proxy.java: Improved javadocs.
	
	2004-10-15  Michael Koch  <konqueror@gmx.de>
	
	* java/lang/reflect/Proxy.java:
	Reworked import statements.
	
	2004-10-11  Jeroen Frijters  <jeroen@frijters.net>
	
	* java/lang/reflect/Proxy.java