@@ -1,3 +1,9 @@
+2005-01-10  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	* Makefile.am: Fixed BUILD_ENVIRONMENT generation.
+
+	* Makefile.in: Regenerated.
+
 2005-01-10  Ito Kazumitsu  < kaz@maczuka.gcd.org>
 
 	* kaffe/libraries/javalib/kaffe/io/KaffeCharset.java,
